# Iridium

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.bat  build.sh  buildRelease.sh  cmake_install.cmake  readme.md
Demo/: CMakeLists.txt  Makefile  cmake_install.cmake
Demo/src/: Demo.cpp
IridiumEngine/: CMakeLists.txt  Makefile  cmake_install.cmake
IridiumEngine/dependencies/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
IridiumEngine/dependencies/glfw-3.4/docs/: Makefile  cmake_install.cmake
IridiumEngine/dependencies/glfw-3.4/src/: Makefile  cmake_install.cmake
IridiumEngine/src/: appinfo.cpp  appinfo.hpp  entryPoint.cpp  entryPoint.hpp  inputHandler.cpp  inputHandler.hpp  log.cpp  log.hpp  memory.hpp  thread.cpp  thread.hpp  utils.cpp  utils.hpp
IridiumEngine/src/assets/: assetManager.hpp  image.cpp  image.hpp  shader.cpp  shader.hpp  shaderCompiler.cpp  shaderCompiler.hpp
IridiumEngine/src/renderer/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex.hpp  vulkan.cpp  vulkan.hpp  window.cpp  window.hpp
data/shaders/: frag.glsl  vert.glsl
